k8s-configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            name: web
            protocol: TCP
          readinessProbe:
            httpGet:
              port: web
              path: /
