k8s-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30001
