k8s-configs/svclb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svclb
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80 
  type: LoadBalancer
